changed /gen swagger documentation && changed README file
